--- a/views/tabs/tab-services.njk
+++ b/views/tabs/tab-services.njk
@@ -124,62 +124,62 @@ The select will have:
             </tr>
          <!-- header row with filter dropdown -->
             <tr>
-                  <!--  1 --><th class="col-header"></th>
+                  <!--  1 --><th class="row-header-select"></th>
 
-                  <!--  2 --><th class="col-header">{{ dropdownFilter(documents, "gitInfo.owner", "select-owner") }}</th>
+                  <!--  2 --><th class="row-header-select">{{ dropdownFilter(documents, "gitInfo.owner", "select-owner") }}</th>
 
-                  <!--  3 --><th class="col-header"></th>
-                  <!--  4 --><th class="col-header"></th>
-                  <!--  5 --><th class="col-header"></th>
+                  <!--  3 --><th class="row-header-select"></th>
+                  <!--  4 --><th class="row-header-select"></th>
+                  <!--  5 --><th class="row-header-select"></th>
 
-                  <!--  5 --><th class="col-header"></th>
-                  <!--  7 --><th class="col-header"></th>
-                  <!--  8 --><th class="col-header"></th>
-                  <!--  9 --><th class="col-header"></th>
+                  <!--  5 --><th class="row-header-select"></th>
+                  <!--  7 --><th class="row-header-select"></th>
+                  <!--  8 --><th class="row-header-select"></th>
+                  <!--  9 --><th class="row-header-select"></th>
 
-                  <!-- 10 --><th class="col-header"></th>
-                  <!-- 11 --><th class="col-header"></th>
+                  <!-- 10 --><th class="row-header-select"></th>
+                  <!-- 11 --><th class="row-header-select"></th>
 
-                  <!-- 12 --><th class="col-header"></th>
-                  <!-- 13 --><th class="col-header"></th>
-                  <!-- 14 --><th class="col-header"></th>
+                  <!-- 12 --><th class="row-header-select"></th>
+                  <!-- 13 --><th class="row-header-select"></th>
+                  <!-- 14 --><th class="row-header-select"></th>
 
-                  <!-- 15 --><th class="col-header"></th>
-                  <!-- 16 --><th class="col-header"></th>
-                  <!-- 17 --><th class="col-header"></th>
-                  <!-- 18 --><th class="col-header"></th>
-                  <!-- 19 --><th class="col-header"></th>
-                  <!-- 20 --><th class="col-header"></th>
-                  <!-- 21 --><th class="col-header"></th>
+                  <!-- 15 --><th class="row-header-select"></th>
+                  <!-- 16 --><th class="row-header-select"></th>
+                  <!-- 17 --><th class="row-header-select"></th>
+                  <!-- 18 --><th class="row-header-select"></th>
+                  <!-- 19 --><th class="row-header-select"></th>
+                  <!-- 20 --><th class="row-header-select"></th>
+                  <!-- 21 --><th class="row-header-select"></th>
             </tr>
          <!-- Col Headers -->
             <tr>
-                  <!--  1 --><th class="col-header header-service" id="col-head-service" data-type="string"> Service</th>
+                  <!--  1 --><th class="row-header-title header-service" id="col-head-service" data-type="string"> Service</th>
 
-                  <!--  2 --><th class="col-header header-git" id="col-head-git-owner"    data-type="string"> Owner</th>
-                  <!--  3 --><th class="col-header header-git" id="col-head-git-lang"     data-type="string"> Lang</th>
-                  <!--  4 --><th class="col-header header-git" id="col-head-git-rel-last" data-type="string"> Last Release</th>
-                  <!--  5 --><th class="col-header header-git" id="col-head-git-rel-date" data-type="date">   Date</th>
+                  <!--  2 --><th class="row-header-title header-git" id="col-head-git-owner"    data-type="string"> Owner</th>
+                  <!--  3 --><th class="row-header-title header-git" id="col-head-git-lang"     data-type="string"> Lang</th>
+                  <!--  4 --><th class="row-header-title header-git" id="col-head-git-rel-last" data-type="string"> Last Release</th>
+                  <!--  5 --><th class="row-header-title header-git" id="col-head-git-rel-date" data-type="date">   Date</th>
 
-                  <!--  5 --><th class="col-header header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Coverage</span></th>
-                  <!--  7 --><th class="col-header header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"><span>Bugs</span></th>
-                  <!--  8 --><th class="col-header header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"><span>Code smell</span></th>
-                  <!--  9 --><th class="col-header header-sonar-metric" id="col-head-sonar-vul"      data-type="number"><span>Vulnerabilities</span></th>
+                  <!--  5 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Coverage</span></th>
+                  <!--  7 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"><span>Bugs</span></th>
+                  <!--  8 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"><span>Code smell</span></th>
+                  <!--  9 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-vul"      data-type="number"><span>Vulnerabilities</span></th>
 
-                  <!-- 10 --><th class="col-header header-version" id="col-head-deptk-version"   data-type="string"> Version</th>
-                  <!-- 11 --><th class="col-header header-version" id="col-head-deptk-runtime"   data-type="string"> Runtime</th>
+                  <!-- 10 --><th class="row-header-title header-version" id="col-head-deptk-version"   data-type="string"> Version</th>
+                  <!-- 11 --><th class="row-header-title header-version" id="col-head-deptk-runtime"   data-type="string"> Runtime</th>
 
-                  <!-- 12 --><th class="col-header header-ecs" id="col-head-ecs-cidev"   data-type="string"><span>cidev</span></th>
-                  <!-- 13 --><th class="col-header header-ecs" id="col-head-ecs-stag"    data-type="string"><span>staging</span></th>
-                  <!-- 14 --><th class="col-header header-ecs" id="col-head-ecs-live"    data-type="string"><span>live</span></th>
+                  <!-- 12 --><th class="row-header-title header-ecs" id="col-head-ecs-cidev"   data-type="string"><span>cidev</span></th>
+                  <!-- 13 --><th class="row-header-title header-ecs" id="col-head-ecs-stag"    data-type="string"><span>staging</span></th>
+                  <!-- 14 --><th class="row-header-title header-ecs" id="col-head-ecs-live"    data-type="string"><span>live</span></th>
 
-                  <!-- 15 --><th class="col-header header-deptrack"  id="col-head-deptk-date" data-type="date"  >Last BOM</th>
-                  <!-- 16 --><th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcrit" data-type="number"><span>Critical</span></th>
-                  <!-- 17 --><th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mhigh" data-type="number"><span>High</span></th>
-                  <!-- 18 --><th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mmed"  data-type="number"><span>Medium</span></th>
-                  <!-- 19 --><th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mlow"  data-type="number"><span>Low</span></th>
-                  <!-- 20 --><th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mvul"  data-type="number"><span>Vulner.</span></th>
-                  <!-- 21 --><th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcomp" data-type="number"><span>Compon.</span></th>
+                  <!-- 15 --><th class="row-header-title header-deptrack"  id="col-head-deptk-date" data-type="date"  >Last BOM</th>
+                  <!-- 16 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mcrit" data-type="number"><span>Critical</span></th>
+                  <!-- 17 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mhigh" data-type="number"><span>High</span></th>
+                  <!-- 18 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mmed"  data-type="number"><span>Medium</span></th>
+                  <!-- 19 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mlow"  data-type="number"><span>Low</span></th>
+                  <!-- 20 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mvul"  data-type="number"><span>Vulner.</span></th>
+                  <!-- 21 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mcomp" data-type="number"><span>Compon.</span></th>
             </tr>
          </thead>
          <tbody>
