--- a/views/tabs/tab-endol.njk
+++ b/views/tabs/tab-endol.njk
@@ -31,13 +31,13 @@
       <thead>
          <!-- Col Headers -->
          <tr>
-            <th class="col-header header-project"         id="col-head-project"         data-type="string">Project</th>
-            <th class="col-header header-cycle"           id="col-head-cycle"           data-type="string">Cycle</th>
-            <th class="col-header header-rel-date"        id="col-head-rel-date"        data-type="string">Release Date</th>
-            <th class="col-header header-lts"             id="col-head-lts"             data-type="string">LTS</th>
-            <th class="col-header header-eol"             id="col-head-eol"             data-type="date">EOL</th>
-            <th class="col-header header-latest"          id="col-head-latest"          data-type="string">Latest</th>
-            <th class="col-header header-latest-rel-date" id="col-head-latest-rel-date" data-type="date">Latest Release Date</th>
+            <th class="row-header-title header-project"         id="col-head-project"         data-type="string">Project</th>
+            <th class="row-header-title header-cycle"           id="col-head-cycle"           data-type="string">Cycle</th>
+            <th class="row-header-title header-rel-date"        id="col-head-rel-date"        data-type="string">Release Date</th>
+            <th class="row-header-title header-lts"             id="col-head-lts"             data-type="string">LTS</th>
+            <th class="row-header-title header-eol"             id="col-head-eol"             data-type="date">EOL</th>
+            <th class="row-header-title header-latest"          id="col-head-latest"          data-type="string">Latest</th>
+            <th class="row-header-title header-latest-rel-date" id="col-head-latest-rel-date" data-type="date">Latest Release Date</th>
          </tr>
       </thead>
       <tbody>
