--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,9 +11,10 @@
    height: 100%;
    font-family: Arial, sans-serif;
  }
-/* ------------ HEADER  ------------ */
+/* ------------ HEADER  & FOOTER ------------ */
 
-.header-container {
+.header-container,
+.footer-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
@@ -23,18 +24,21 @@
    box-sizing: border-box; /* Ensures padding and margin are included in the width calculation */
 }
 
-.header-left-content {
+.header-left-content,
+.footer-left-content {
    display: flex;
    align-items: center;
 }
 
-.header-center-content {
+.header-center-content,
+.footer-center-content {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
 }
 
-.header-right-content {
+.header-right-content,
+.footer-right-content {
    position: absolute;
    right: 5%;
    transform: translateX(5%);
@@ -57,17 +61,10 @@
    color: white;
 }
 
-.row-header-title{
-   font-size: 14px;
-   cursor: pointer;
-}
-
-.fixed-header {
+.fixed-hf {
    position: fixed;
-   top: 0;
    left: 0;
    width: 100%;
-   height: 60px; /* Fixed height */
    background-color: #333;
    color: #fff;
    display: flex;
@@ -76,27 +73,22 @@
    z-index: 1000;
  }
 
-/* ------------ FOOTER  ------------ */
-.footer-text {
+ .fixed-header {
+   top: 0;
+   height: 60px; /* Fixed height */
+ }
+
+.fixed-footer {
+   bottom: 0;
+   height: 40px; /* Fixed height */
+   justify-content: center;
+}
+.footer-center-text,
+.footer-right-text {
    font-size: 12px;
    color: white;
    text-decoration: none;
 }
-
-.fixed-footer {
-   position: fixed;
-   bottom: 0;
-   left: 0;
-   width: 100%;
-   height: 40px; /* Fixed height */
-   background-color: #333;
-   color: #fff;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   z-index: 1000;
-}
-
 /* ------------ MAIN AREA  ------------ */
 .main-content {
    display: flex;
@@ -149,6 +141,10 @@
    padding-top: 0;
    }
 
+.row-header-title{
+      font-size: 14px;
+      cursor: pointer;
+    }
 /* ------------ SINGLE TAB - LEFT COL  ------------ */
 .tab-container-left-col {
    width: 15%; /* Approximately 15% of horizontal space */
