--- a/public/css/tab-endol.css
+++ b/public/css/tab-endol.css
@@ -1,1 +1,7 @@
 /* public/css/tab/tab-endol.css */
+
+.td-project a {
+    font-size: 10px;
+    text-decoration: none;
+    color: rgb(224, 118, 52);
+ }
